--- a/index.html
+++ b/index.html
@@ -285,6 +285,19 @@
                     />
                     
                     <div className="w-full max-w-md">
+                        {/* Logo */}
+                        <div className="text-center mb-6">
+                            <div className="inline-flex items-center gap-3 bg-gray-800/50 backdrop-blur-sm px-6 py-3 rounded-full">
+                                <div className="w-10 h-10 bg-gradient-to-br from-teal-400 to-teal-500 rounded-full flex items-center justify-center">
+                                    <span className="text-white font-bold text-xl">♪</span>
+                                </div>
+                                <div className="text-left">
+                                    <div className="text-teal-400 font-bold text-lg leading-tight">MUSIC</div>
+                                    <div className="text-gray-300 text-sm leading-tight">by Steff</div>
+                                </div>
+                            </div>
+                        </div>
+                        
                         {/* Album Art */}
                         <div className="mb-8 relative">
                             <div className="w-full aspect-square bg-gradient-to-br from-teal-400 via-teal-500 to-teal-600 rounded-3xl shadow-2xl flex items-center justify-center relative overflow-hidden">
@@ -462,5 +475,6 @@
     </script>
 </body>
 </html>
+
 
 
