--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Music Player">
+    <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+
     
     <title>Lecteur de Musique</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -575,6 +577,7 @@
     </script>
 </body>
 </html>
+
 
 
 
