--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-title" content="Music Player">
     <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
     <link rel="icon" type="image/png" sizes="512x512" href="icon.png">
+    <link rel="manifest" href="manifest.json">
     
     <title>Lecteur de Musique</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -657,6 +658,7 @@
     </script>
 </body>
 </html>
+
 
 
 
